Edited wiki page Upgrade_v1 through web user interface.

--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -1,5 +1,9 @@
 #summary upgrading from a v0 instance
 
+<font color="red">
+*UNDER CONSTRUCTION DO NOT USE
+</font>
+
 * Table of Contents *
 <wiki:toc max_depth="2" />
 
