--- a/wiki/ServerInstall_v1_RC4.wiki
+++ b/wiki/ServerInstall_v1_RC4.wiki
@@ -133,6 +133,7 @@ $ vi ~/.cif
  # add the following as a template, the API KEYS will be generated in a following section, for now just use the XXX as the placeholders.
 {{{
 # the simple stuff
+# cif_archive configuration is required by cif-router, cif_feed (cif-router, libcif-dbi)
 [cif_archive]
 # if we want to enable rir/asn/cc, etc... they take up more space in our repo
 # datatypes = infrastructure,domain,url,email,search,malware,cc,asn,rir
@@ -144,6 +145,7 @@ datatypes = infrastructure,domain,url,email,search,malware
 # enable your own groups is you start doing data-sharing with various groups
 #groups = everyone,group1.example.com,group2.example.com,group3.example.com
 
+# client is required by cif_router, cif_smrt (cif-router, cif-smrt)
 [client]
 # the apikey for your client
 apikey = XXXXXX-XXX-XXXX
@@ -152,6 +154,7 @@ apikey = XXXXXX-XXX-XXXX
 host = https://localhost:443/api
 verify_tls = 0
 
+# cif_smrt is required by cif_smrt
 [cif_smrt]
 # change example.com to your local domain and hostname respectively
 # this identifies the data in your instance and ties it to your specific instance in the event
@@ -165,7 +168,7 @@ instance = cif.localhost
 apikey = XXXXXX-XXX-XXXX 
 
 # advanced stuff
-
+# db config is required by cif-router, cif_feed, cif_apikeys (cif-router, libcif-dbi)
 [db]
 host = 127.0.0.1
 user = postgres
@@ -174,6 +177,7 @@ database = cif
 
 # if the normal IODEF restriction classes don't fit your needs
 # ref: https://code.google.com/p/collective-intelligence-framework/wiki/RestrictionMapping_v1
+# restriction map is required by cif-router, cif_feed (cif-router, libcif-dbi)
 [restriction_map]
 #white = public 
 #green = public 
