--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -26,9 +26,9 @@ There are two ways to perform an upgrade, in-place and new installation. Both of
 
 === In-Place Upgrade ===
 ==== Overview ====
- * does NOT alter the archive and index tablespaces
  * drops all v0 tables, with the exception of archive, apikeys and apikeys_groups
  * alters the archive and apikeys tables to be compatible with v1
+ * does NOT alter the archive and index tablespaces
  * creates the v1 tables around the archive table (in the index tablespace)
  * <font color="red">EXPORT YOUR ARCHIVE TABLE TO A TEMPORARY DISK (lots of GB's)</font>
 {{{
@@ -60,7 +60,7 @@ $ sudo make upgradedb
   * follow the [ServerInstall_v1_RC4#Configuration configuration] section to generate your new config
   * follow the [ServerInstall_v1_RC4#Enabling_Feed_Generation feed generation] section to generate any feeds you want configured
  # run the upgrade-database utility that will convert the existing archive data into the new v1 format, as well as any feeds to be generated. 
-  * if you haven't backed up the archive table, this is a good time to do it.
+  * <font color="red">if you haven't backed up the archive table, this is a good time to do it.</font>
   * this will take a very long time to run (hours, days depending on how much data you have)
   * if the process breaks, it keeps a journal (/tmp/cif-upgrade-database.journal) of where it left off and will re-start where it left off
 {{{
