--- a/wiki/Config_v1.wiki
+++ b/wiki/Config_v1.wiki
@@ -59,7 +59,7 @@ password =
 database = cif
 }}}
 
-== Client ==
+=== Client ===
 {{{
 [client]
 # the apikey for your client
@@ -70,7 +70,7 @@ host = https://localhost:443/api
 verify_tls = 0
 }}}
 
-== SMRT ==
+=== Smrt ===
 {{{
 [client]
 # the apikey for your client
@@ -91,7 +91,7 @@ instance = cif.localhost
 apikey = XXXXXX-XXX-XXXX 
 }}}
 
-== ROUTER ==
+=== Router ===
 {{{
 [db]
 host = 127.0.0.1
@@ -114,7 +114,7 @@ database = cif
 debug = 1
 }}}
 
-== Enabling Feeds ==
+=== Enabling Feeds ===
 Wherever cif_feed (libcif-dbi) is used:
 {{{
 [cif_archive]
