Edited wiki page Upgrade_CentOS6_v1 through web user interface.

--- a/wiki/Upgrade_CentOS6_v1.wiki
+++ b/wiki/Upgrade_CentOS6_v1.wiki
@@ -81,5 +81,6 @@ $ sudo make install
 +   PerlResponseHandler CIF::Router::HTTP
 +   PerlSetVar CIFRouterConfig "/home/cif/.cif"
 </Location>
-
 }}}
+
+Continue with the [Upgrade_v1#Upgrade upgrade]
