Edited wiki page Upgrade_CentOS6_v1 through web user interface.

--- a/wiki/Upgrade_CentOS6_v1.wiki
+++ b/wiki/Upgrade_CentOS6_v1.wiki
@@ -82,5 +82,6 @@ $ sudo make install
 +   PerlSetVar CIFRouterConfig "/home/cif/.cif"
 </Location>
 }}}
+ # restart httpd
 
 Continue with the [Upgrade_v1#Upgrade upgrade]
