Edited wiki page Upgrade_v1 through web user interface.

--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -115,6 +115,7 @@ $ cd cif-v1-rc3-XXXX
 $ ./configure && make testdeps
 $ sudo make install
 }}}
+ # restart apache2
  # upgrade the table structure (drop old tables, alter the archive/apikeys tables a bit, data migration happens below)
 {{{
 $ sudo make upgradedb
