Edited wiki page ServerInstall_v0_CentOS6 through web user interface.

--- a/wiki/ServerInstall_v0_CentOS6.wiki
+++ b/wiki/ServerInstall_v0_CentOS6.wiki
@@ -8,7 +8,7 @@ CentOS 6 Server Install -- this doc considered unstable, although it should most
 = Details =
  # install server deps
 {{{
-$ sudo yum install rng-tools postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel mod_perl mod_perl-devel perl-Digest-SHA perl-Digest-SHA1 libxml2 libxml2-devel perl-XML-LibXML uuid-perl perl-DBD-Pg bind perl-XML-RSS perl-JSON rsync perl-Unicode-String perl-Config-Simple perl-Module-Pluggable perl-MIME-Lite perl-CPAN perl-Class-Accessor perl-YAML perl-XML-Parser uuid uuid-devel uuid-perl perl-Text-Table perl-Net-DNS perl-DateTime-Format-DateParse perl-IO-Socket-INET6 perl-Regexp-Common-net openssl-devel perl-HTTP-Server-Simple
+$ sudo yum install rng-tools postgresql-server httpd httpd-devel mod_ssl gcc make expat expat-devel mod_perl mod_perl-devel perl-Digest-SHA perl-Digest-SHA1 libxml2 libxml2-devel perl-XML-LibXML uuid-perl perl-DBD-Pg bind perl-XML-RSS perl-JSON rsync perl-Unicode-String perl-Config-Simple perl-Module-Pluggable perl-MIME-Lite perl-CPAN perl-Class-Accessor perl-YAML perl-XML-Parser uuid uuid-devel uuid-perl perl-Text-Table perl-Net-DNS perl-DateTime-Format-DateParse perl-IO-Socket-INET6 perl-Regexp-Common-net openssl-devel perl-HTTP-Server-Simple wget
 }}}
  # if you have the epel repo installed:
 {{{
