--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -110,8 +110,8 @@ feed_retention = 7
  # upgrade system dependencies
   * (testing) [Upgrade_DebianSqueeze_v1 Debian 6]
   * (unstable) [Upgrade_DebianWheezy_v1 Debian 7]
-  * (unstable) [Upgrade_Ubuntu12_v1 Ubuntu 12]
-  * (unstable) [Upgrade_CentOS6_v1 CentOS6]
+  * (testing) [Upgrade_Ubuntu12_v1 Ubuntu 12]
+  * (testing) [Upgrade_CentOS6_v1 CentOS6]
  # install the latest CIF [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=filename%3Acif-v1-rc4 package]
 {{{
 $ tar -xzvf cif-v1-rc4-XXXX.tar.gz
