--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -109,7 +109,7 @@ feed_retention = 7
 ==== Upgrade ====
  # upgrade system dependencies
   * (testing) [Upgrade_DebianSqueeze_v1 Debian 6]
-  * (unstable) [Upgrade_DebianWheezy_v1 Debian 7]
+  * (testing) [Upgrade_DebianWheezy_v1 Debian 7]
   * (testing) [Upgrade_Ubuntu12_v1 Ubuntu 12]
   * (testing) [Upgrade_CentOS6_v1 CentOS6]
  # install the latest CIF [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=filename%3Acif-v1-rc4 package]
