Edited wiki page ServerInstall_v1_RC4 through web user interface.

--- a/wiki/ServerInstall_v1_RC4.wiki
+++ b/wiki/ServerInstall_v1_RC4.wiki
@@ -224,7 +224,7 @@ feed_retention = 7
 }}}
  # generate a "role key" for generating feeds everyone (with an apikey) in the system can query for. They apikey generated can be ignored as it's just a placeholder for the system.
 {{{
-$ cif_apikeys -u role_everyone -G everyone -g everyone -a
+$ cif_apikeys -u role_everyone_feed -G everyone -g everyone -a
 }}}
  # log out of the cif user and restart apache
 
